--- a/Angular7-WebAPI-Calendar/ClientApp/src/index.html
+++ b/Angular7-WebAPI-Calendar/ClientApp/src/index.html
@@ -9,6 +9,78 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <!--<app-root>Loading...</app-root>-->
+
+  <div class='container-fluid'>
+    <div class="row">
+      <div class='col-md-8'>
+        Calendar
+      </div>
+      <div class="col-md-4">
+        <div class="btn-group" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-secondary">Home</button>
+          <button type="button" class="btn btn-secondary">About</button>
+          <button type="button" class="btn btn-secondary">Calednar</button>
+        </div>
+      </div>
+    </div>
+    <div class='row'>
+      <div class="col-md-12">
+        <p>choose your month</p>
+
+        <ul class="nav nav-pills">
+          <li><a href="#">Jan</a></li>
+          <li><a href="#">Feb</a></li>
+          <li><a href="#">Mar</a></li>
+          <li class="active"><a href="#">Apr</a></li>
+          <li><a href="#">May</a></li>
+          <li><a href="#">Jun</a></li>
+          <li><a href="#">Jul</a></li>
+          <li><a href="#">Aug</a></li>
+          <li><a href="#">Sep</a></li>
+          <li><a href="#">Cot</a></li>
+          <li><a href="#">Nov</a></li>
+          <li><a href="#">Dec</a></li>
+        </ul>
+
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="col-md-6">
+          <p>
+            Meeting List
+          </p>
+          <ul>
+            <li>
+              <span>02/04/2018 4:00 PM </span><a href="#">Team Meeting</a>
+            </li>
+            <li>
+              <span>02/04/2018 4:00 PM </span><a href="#">Team Meeting</a>
+            </li>
+            <li>
+              <span>02/04/2018 4:00 PM </span><a href="#">Team Meeting</a>
+            </li>
+            <li>
+              <span>02/04/2018 4:00 PM </span><a href="#">Team Meeting</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-6">
+          <div>Description: <p>Project meeting</p></div>
+          <div>Date: <p>028/19/2014 12:00 PM</p></div>
+          <div>Organizer: <p>John Someone</p></div>
+          <div>Attendees:
+            <ul>
+              <li>Attendee 1</li>
+              <li>Attendee 2</li>
+              <li>Attendee 3</li>
+              <li>Attendee 4</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
